Handle missing VM arg on JRE 9+